--- a/Template.AvaloniaApp/MainWindow.axaml
+++ b/Template.AvaloniaApp/MainWindow.axaml
@@ -2,11 +2,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:sn="clr-namespace:Smart.Navigation;assembly=Smart.Navigation.Avalonia"
+        xmlns:sr="clr-namespace:Smart.Avalonia.Resolver;assembly=Smart.Avalonia"
         xmlns:app="using:Template.AvaloniaApp"
         mc:Ignorable="d"
         x:Class="Template.AvaloniaApp.MainWindow"
+        x:DataType="{x:Type app:MainWindowViewModel}"
+        sr:DataContextResolver.Type="app:MainWindowViewModel"
         Title="Template.AvaloniaApp"
         Icon="/Assets/avalonia-logo.ico"
-        d:DesignWidth="800" d:DesignHeight="450">
-    <app:MainView />
+        Width="800" Height="600"
+        d:DesignWidth="800" d:DesignHeight="600"
+        CanResize="True">
+
+    <Canvas sn:NavigationContainer.Navigator="{Binding Navigator}" />
+
 </Window>
