--- a/Template.DesktopApp/MainWindow.axaml
+++ b/Template.DesktopApp/MainWindow.axaml
@@ -4,12 +4,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:sn="clr-namespace:Smart.Navigation;assembly=Smart.Navigation.Avalonia"
         xmlns:sr="clr-namespace:Smart.Avalonia.Resolver;assembly=Smart.Avalonia"
-        xmlns:app="using:Template.AvaloniaApp"
+        xmlns:app="using:Template.DesktopApp"
         mc:Ignorable="d"
-        x:Class="Template.AvaloniaApp.MainWindow"
+        x:Class="Template.DesktopApp.MainWindow"
         x:DataType="{x:Type app:MainWindowViewModel}"
         sr:DataContextResolver.Type="app:MainWindowViewModel"
-        Title="Template.AvaloniaApp"
+        Title="Template.DesktopApp"
         Icon="/Assets/avalonia-logo.ico"
         Width="800" Height="600"
         d:DesignWidth="800" d:DesignHeight="600"
