--- a/Template.DesktopApp/App.axaml
+++ b/Template.DesktopApp/App.axaml
@@ -7,4 +7,13 @@
         <FluentTheme />
     </Application.Styles>
 
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <MergeResourceInclude Source="Assets/Styles/Colors.axaml" />
+                <MergeResourceInclude Source="Assets/Styles/Styles.axaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
+
 </Application>
