--- a/Template.DesktopApp/Views/Main/SubView.axaml
+++ b/Template.DesktopApp/Views/Main/SubView.axaml
@@ -2,12 +2,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:sr="clr-namespace:Smart.Avalonia.Resolver;assembly=Smart.Avalonia.Extensions"
+             xmlns:s="http://smart/avalonia"
              xmlns:local="clr-namespace:Template.DesktopApp.Views.Main"
              mc:Ignorable="d"
              x:Class="Template.DesktopApp.Views.Main.SubView"
              x:DataType="local:SubViewModel"
-             sr:DataContextResolver.Type="local:SubViewModel"
+             s:DataContextResolver.Type="local:SubViewModel"
              d:DesignWidth="800" d:DesignHeight="450">
 
     <StackPanel>
